in cart component, rate value alignment issue fiexd

--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -49,7 +49,14 @@
 }
 
 .rate {
-    font-size: 1.1rem;
+    &>span {
+      position: relative;
+      font-size: 1.1rem;
+      margin-left: 2px;
+      color: #333;
+      top:-3px;
+      vertical-align: bottom;
+    }
 }
 
 .button-add {
